fix: align checkmark icon with text in copy button

--- a/frontend/src/app/components/connections-list/hosted-database-success-dialog/hosted-database-success-dialog.component.css
+++ b/frontend/src/app/components/connections-list/hosted-database-success-dialog/hosted-database-success-dialog.component.css
@@ -74,6 +74,8 @@
 	width: 18px;
 	height: 18px;
 	margin-right: 4px;
+	vertical-align: middle;
+	line-height: 1;
 }
 
 .hosted-dialog__actions {
